# TruckAgent

./: .gitignore  CFR_DESIGN.md  LICENSE  README.md  RULES.md  pyproject.toml
scripts/: analyze.py  analyze_deep.py  demo_round.py  eval.py  play.py  train.py  train_deep.py
src/truco/: __init__.py  agent.py  baselines.py  cards.py  cfr.py  dp.py  exploit.py  game.py  infoset.py  keys.py
src/truco/deep/: __init__.py  agent.py  buffer.py  exploit.py  features.py  nets.py  trainer.py
tests/: test_cfr.py  test_game.py
truco-rs/: Cargo.toml
truco-rs/src/: cards.rs  cfr.rs  dp.rs  exploit.rs  game.rs  keys.rs  lib.rs
