[package]
name = "truco-rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "truco"
path = "src/lib.rs"

[[bin]]
name = "train"
path = "src/bin/train.rs"

[dependencies]
rayon = "1.10"
rand = "0.8"
rand_xoshiro = "0.6"
serde = { version = "1", features = ["derive"] }
rmp-serde = "1.3"
flate2 = "1.0"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
